fix nav icon not showing

--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -36,7 +36,7 @@ main {
   border: 1px solid transparent;
   padding: 0 0.25rem;
   border-radius: 0.25rem;
-  background-image: url(../img/mushi.ico);
+  background-image: url("../img/mushi.ico");
   background-size: contain;
   background-repeat: no-repeat;
   background-position-x: center;
